fixed some landing alignment

--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -81,7 +81,7 @@ button {
   transform-origin: bottom; }
 
 .panel img {
-  width: 120px;
+  width: 100%;
   float: left;
   margin-right: 50px;
   opacity: 0;
